apps/profilarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profilarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: profilarr
  template:
    metadata:
      labels:
        app: profilarr
      namespace: media
    spec:
      containers:
        - name: profilarr
          securityContext:
            privileged: true
          image: linuxserver/profilarr
          imagePullPolicy: Always
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: profilarr-config
              mountPath: /config
      volumes:
        - name: profilarr-config
          persistentVolumeClaim:
            claimName: profilarr-config-pvc
